# boatrace

./: README.md  pyproject.toml  scraping.py
scraping/: program_scraping.py  return_scraping.py
